--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,5 @@
 {
-"version": "2.0.0",
+    "version": "2.0.0",
     "tasks": [
         {
             "type": "shell",
@@ -9,15 +9,35 @@
                 "-g",
                 "-o",
                 "/tmp/buildtempc",
-                "*.c"                  // 匹配所有源文件
+                "*.c"
             ],
             "options": {
-                "cwd": "${fileDirname}" // 定位到当前目录
+                "cwd": "${fileDirname}"
             },
+            "group": "build"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++.exe 生成活动文件",
+            "command": "D:\\mingw64\\bin\\g++.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
             "group": {
                 "kind": "build",
-             "isDefault": true
-            }
+                "isDefault": true
+            },
+            "detail": "调试器生成的任务。"
         }
     ]
 }
